Fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,13 @@
 *{
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body{
     display: flex;
     background-color: rgb(243, 246, 248);
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 p{
